# runfile

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Runfile-ci.json  Runfile-wsl.json  Runfile.json  dist-workspace.toml
.githooks/: pre-commit
.github/: DOCS.md
.github/actions/bootstrap/: action.yml
.github/actions/setup/: action.yml
.github/release-assets/: install.ps1  install.sh
.github/workflows/: ci.yml  publish-npm.yml  release.yml
crates/runfile-cli/: Cargo.toml
crates/runfile-cli/src/: agent_detect.rs  ci_detect.rs  cmd_config.rs  cmd_env.rs  cmd_mcp.rs  cmd_run.rs  cmd_update.rs  cmd_utilities.rs  completions.rs  main.rs  runfile_helpers.rs  shell.rs  tests.rs
crates/runfile-cli/src/cmd_env/: crypt.rs  mod.rs  secret_keys.rs
crates/runfile-cli/src/tests/: cli_parse.rs  cli_structure.rs  completion_refs.rs  completions.rs  env_file_target.rs  env_parsing.rs  help.rs  list_subcommands.rs  mod.rs  runfile_target.rs
crates/runfile-cli/tests/: generate_and_write_cli.rs  prepare_cli.rs
crates/runfile-converters/: Cargo.toml
crates/runfile-converters/src/: lib.rs  makefile.rs  package_json.rs  tests.rs
crates/runfile-converters/src/tests/: dotenvx.rs  makefile.rs  makefile_directives.rs  mod.rs  package_json.rs  package_json_lifecycle.rs
crates/runfile-crypto/: Cargo.toml
crates/runfile-crypto/src/: lib.rs  tests.rs
crates/runfile-crypto/src/tests/: constant_time.rs  core.rs  mod.rs  zeroize.rs
crates/runfile-env/: Cargo.toml
crates/runfile-env/src/: lib.rs  parse.rs  tests.rs
crates/runfile-env/src/tests/: build.rs  encryption.rs  load.rs  mod.rs  parse.rs  path.rs
crates/runfile-executor/: Cargo.toml
crates/runfile-executor/src/: args.rs  control_flow.rs  dsl_eval.rs  env.rs  executor.rs  extract.rs  force_kill.rs  functions.rs  lib.rs  logging.rs  parallel.rs  parallel_output.rs  runner.rs  stdio_tailer.rs  tests.rs
crates/runfile-executor/src/tests/: arg_validation_tests.rs  control_flow_match_parallel.rs  declared_vars.rs  empty_command_skip.rs  env_file_tests.rs  escape_parallel_tests.rs  extract_tests.rs  flags_run_tests.rs  functions.rs  mod.rs  prefix_rename.rs  quote_rework.rs  runtime_when_targetcall.rs  same_shell.rs  shell_quoting_tests.rs  stdin_args.rs
crates/runfile-generators/: Cargo.toml
crates/runfile-generators/src/: jetbrains.rs  lib.rs  task_descriptors.rs  tests.rs  vscode.rs  zed.rs
crates/runfile-generators/src/tests/: coverage.rs  exclude_metadata.rs  internal_targets.rs  jetbrains.rs  mod.rs  stdin_args.rs  task_descriptors.rs  zed.rs
crates/runfile-mcp/: Cargo.toml
crates/runfile-mcp/src/: install.rs  lib.rs  server.rs  tests.rs  tools.rs
crates/runfile-mcp/src/tests/: inspect.rs  install.rs  mod.rs  security.rs  server.rs  tool_defs.rs
crates/runfile-parser/: Cargo.toml
crates/runfile-parser/src/: discover.rs  dsl.rs  json.rs  lib.rs  merge.rs  parse.rs  prepare.rs  schema.rs  tests.rs
crates/runfile-parser/src/tests/: features.rs  includes_edge.rs  json5_merge.rs  mod.rs  parsing.rs  prepare.rs  targetcall_match_meta.rs  targets_aliases.rs
crates/runfile-settings/: Cargo.toml
crates/runfile-settings/src/: keyring_keys.rs  keyring_store.rs  lib.rs  paths.rs  prepare_state.rs  secret_service_store.rs  settings.rs  tests.rs
crates/runfile-settings/src/tests/: core.rs  delete.rs  global_files.rs  mod.rs  path_alias.rs  prepare_state.rs  secret_keys.rs
crates/runfile-shell/: Cargo.toml
crates/runfile-shell/src/: detect.rs  lib.rs  resolve.rs  tests.rs  types.rs
crates/runfile-shell/src/tests/: core.rs  coverage.rs  mod.rs
npm/: package.json
schemas/: v0.schema.json
scripts/: build-npm-packages.mjs  install.ps1
