[workspace]
members = [
	"crates/runfile-parser",
	"crates/runfile-shell",
	"crates/runfile-settings",
	"crates/runfile-env",
	"crates/runfile-crypto",
	"crates/runfile-executor",
	"crates/runfile-converters",
	"crates/runfile-generators",
	"crates/runfile-mcp",
	"crates/runfile-cli",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
rust-version = "1.94.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Skiley/runfile"
homepage = "https://github.com/Skiley/runfile"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json5 = "1.3.1"
thiserror = "2.0.18"
dirs = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }
tempfile = "3.27.0"
which = "8.0.2"
keyring = { version = "3.6.3", default-features = false }
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
globset = "0.4.18"
shlex = "1.3.0"
regex = "1.12.3"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = "z"
strip = true
