[package]
name = "runfile-env"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Environment variable building for Runfile"

[dependencies]
runfile-crypto = { path = "../runfile-crypto" }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
