[package]
description = "Runfile.json discovery and parsing"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "runfile-parser"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hex.workspace = true
json5.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
