[package]
name = "runfile-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local settings management for Runfile"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
runfile-parser = { path = "../runfile-parser" }
runfile-crypto = { path = "../runfile-crypto" }
keyring = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native"] }

[dev-dependencies]
tempfile = { workspace = true }
