[package]
name = "runfile-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local settings management for Runfile"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
runfile-parser = { path = "../runfile-parser" }
runfile-crypto = { path = "../runfile-crypto" }
keyring-core = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = { workspace = true }
secret-service = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
